/*
 * Copyright 2022 The Yorkie Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package api;

import "resources.proto";

// Admin is a service that provides a API for Admin.
service Admin {
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {}
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {}
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse) {}

  rpc ListDocuments (ListDocumentsRequest) returns (ListDocumentsResponse) {}
  rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse) {}
}

message CreateProjectRequest {
  string name = 1;
}

message CreateProjectResponse {
  Project project = 1;
}

message ListProjectsRequest {}

message ListProjectsResponse {
  repeated Project projects = 1;
}

message UpdateProjectRequest {
  Project project = 1;
}

message UpdateProjectResponse {}

message ListDocumentsRequest {
  string previous_id = 1;
  int32 page_size = 2;
  bool is_forward = 3;
}

message ListDocumentsResponse {
  repeated DocumentSummary documents = 1;
}

message GetDocumentRequest {
  string id = 1;
}

message GetDocumentResponse {
  DocumentSummary document = 1;
}
